draft01 content landing page

--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
 <body>
 <header id="title-block-header">
 <h1 class="title">Atova</h1>
-<p class="subtitle">Software Agency</p>
 </header>
 <nav id="TOC" role="doc-toc">
 <ul>
-<li><a href="#developers-notes" id="toc-developers-notes">Developer’s
-Notes</a></li>
-<li><a href="#developers-tools" id="toc-developers-tools">Developer’s
-Tools</a></li>
+<li><a href="#services" id="toc-services">Services</a></li>
+<li><a href="#demo" id="toc-demo">Demo</a></li>
 </ul>
 </nav>
 <style>
+.title {display:none;}
 #title-block-header {
-    background-image: url("./img/phiber.jpg");
+    background-image: url("./img/Logo_atovaSA.svg");
+background-size: 100%;
+  width: 1200px;
+  height: 550px;
 }
 :root{--color-bg: linear-gradient(45deg, rgba(220, 216, 218, 0.8), rgba(199, 213, 221, 0.51));}
 </style>
@@ -57,65 +58,79 @@ What to do after the official <em>Rust Programming Language Book</em>
 <main>
 <section id="section-1">
 <header>
-<h2 id="developers-notes">Developer’s Notes</h2>
-Rust programming, Tech Tips &amp; Tools
+<h2 id="services">Services</h2>
+<p>Vous désirez resoudre un problème, saisir une opportunité ou relevé
+un défi qui necessite une solution numerique? Vous souhaitez résoudre un
+problème, saisir une opportunité ou relever un défi qui nécessite une
+solution numérique ?</p>
+Atova vous accompagne.
 </header>
 <aside>
-<h3 id="rust-input-output">Rust Input / Output</h3>
-<p>Rust <a href="./dev_notes/input_output.html">Input / Output</a></p>
-<small>*with small content</small>
+<h3 id="professionelle">Professionelle</h3>
+<p>Chaque collaborateur est expert dans son domaine (Frontend, Serveurs,
+Design) et un généraliste polyvalent au besoin. Nous évitons les
+employés « fullstack » qui sont touche-à-tout et maîtres de rien.</p>
 </aside>
 <aside>
-<h3 id="rust-iterators-and-combinators">Rust Iterators and
-Combinators</h3>
-<p>Rust <a href="./dev_notes/iterators_and_combinators.html">Iterators
-and Combinators</a></p>
-<sup>working with collections</sup>
+<h3 id="rapide">Rapide</h3>
+<p>L’apprentissage et la formation sont fortement encouragés chez Atova,
+mais jamais pendant les heures facturables d’un client.</p>
+<p>Aussi, nous ne choisisons que des Projets que nous maitrison. Avec
+une predilection pour les Projets moins de trois mois. Les projets plus
+ambitieux sont en génerale divisible en tranche plus mesurable,
+permetant une approche iterative et incrementielle.</p>
+<p>Aussi, nous choisissons uniquement les Projets que nous maîtrisons.
+Avec une prédilection pour les projets de moins de trois mois. Les
+projets plus ambitieux sont généralement divisibles en tranches plus
+gérables et mesurables, permettant une approche itérative et
+incrémentale.</p>
+<p>Pour cela nous avons développé la méthode FAST: Form And Substance
+Together.</p>
 </aside>
 <aside>
-<h3 id="serde-reqwest">Serde &amp; Reqwest</h3>
-Rust <a href="./">Serde / Reqwest</a>
+<h3 id="fiable">Fiable</h3>
+<p>Nous utilisons des outils et des solutions sûrs et validés par
+l’industrie</p>
+<ul>
+<li>Développement Rust (backend)</li>
+<li>Frontend dynamique avec Webassembly</li>
+<li>Intégration flexible avec les technologies existantes</li>
+</ul>
 </aside>
 </section>
 <!--^ section-1 -->
 <hr />
 <section id="section-2">
 <header>
-<h2 id="developers-tools">Developer’s Tools</h2>
-Git, hx (helix editor) &amp; Docker
+<h2 id="demo">Demo</h2>
+<p>Exemple de projet récemment réalisé.</p>
 </header>
 <aside>
-<h3 id="git">Git</h3>
-Card content
+<h3 id="demo-01">DEMO 01</h3>
+DEMO 01
 </aside>
 <aside>
-<h3 id="hx">hx</h3>
-Card content
+<h3 id="demo-02">DEMO 02</h3>
+DEMO 02
 </aside>
 <aside>
-<h3 id="docker">Docker</h3>
-Card content
+<h3 id="demo-03">DEMO 03</h3>
+DEMO 03
 </aside>
 </section>
 <!--^ section-2 -->
-<hr />
-<header>
-<p>
-<a href="https://lerina.github.io"><i>←
-OPTIMAL</i></a><a href="nobundle.github.io"><b>Webassembly →</b></a>
-</p>
-</header>
 </main>
 <footer class="center_justify">
 <a href="https://github.com/atova_agency" target="_blank" title="github"><img
-src="https://atova-agency.github.io/img/github32px.png"
-class="link glow" alt="github" /> </a> <a
-href="https://atova-agency.github.io">Design Develop FAST</a>
+src="https://atova-agency.github.io/img/" class="link glow"
+alt="github" /> </a> <a href="https://atova-agency.github.io">Design
+Develop FAST</a>
 </footer>
 <footer>
 <hr />
 <p>
-<small><a href="https://lerina.github.io">Contact info</a></small>
+<small><a href="https://atova-agency.github.io/start/contact.html">Contact
+info</a></small>
 </p>
 </footer>
 </body>
