draft01 light edit landing page

--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@ DEMO 03
 <!--^ section-2 -->
 </main>
 <footer class="center_justify">
-<a href="https://github.com/atova_agency" target="_blank" title="github"><img
-src="https://atova-agency.github.io/img/" class="link glow"
-alt="github" /> </a> <a href="https://atova-agency.github.io">Design
-Develop FAST</a>
+<a href="https://github.com/atova-agency" target="_blank" title="github"><img
+src="https://atova-agency.github.io/img/a_atovy-ico.svg"
+class="link glow" alt="github" /> [Design Develop FAST]</a>
 </footer>
 <footer>
 <hr />
