--- a/index.html
+++ b/index.html
@@ -49,41 +49,42 @@ background-size: 100%;
 </style>
 <header>
 <h1>
-Adopting <i>Rust</i>
+La solution la mieux adaptée à votre projet
 </h1>
-<p>
-What to do after the official <em>Rust Programming Language Book</em>
-</p>
+<h2>
+est celle qui n’oblige pas votre projet à s’adapter à votre solution
+</h2>
 </header>
 <main>
 <section id="section-1">
 <header>
 <h2 id="services">Services</h2>
-<p>Vous désirez resoudre un problème, saisir une opportunité ou relevé
-un défi qui necessite une solution numerique? Vous souhaitez résoudre un
-problème, saisir une opportunité ou relever un défi qui nécessite une
-solution numérique ?</p>
-Atova vous accompagne.
+<p>Vous souhaitez résoudre un problème, saisir une opportunité ou
+relever un défi qui nécessite une solution numérique ?</p>
+<em><b>Atova</b> vous accompagne</em> et vous propose un service:
 </header>
 <aside>
 <h3 id="professionelle">Professionelle</h3>
-<p>Chaque collaborateur est expert dans son domaine (Frontend, Serveurs,
-Design) et un généraliste polyvalent au besoin. Nous évitons les
-employés « fullstack » qui sont touche-à-tout et maîtres de rien.</p>
+<p>Chaque collaborateur est expert dans son domaine et un généraliste
+polyvalent au besoin.</p>
+<ul>
+<li>Frontend</li>
+<li>Serveurs</li>
+<li>Design</li>
+<li>Test</li>
+</ul>
+<p>Nous évitons les employés « fullstack » touche-à-tout et maîtres de
+rien.</p>
 </aside>
 <aside>
 <h3 id="rapide">Rapide</h3>
-<p>L’apprentissage et la formation sont fortement encouragés chez Atova,
-mais jamais pendant les heures facturables d’un client.</p>
-<p>Aussi, nous ne choisisons que des Projets que nous maitrison. Avec
-une predilection pour les Projets moins de trois mois. Les projets plus
-ambitieux sont en génerale divisible en tranche plus mesurable,
-permetant une approche iterative et incrementielle.</p>
-<p>Aussi, nous choisissons uniquement les Projets que nous maîtrisons.
-Avec une prédilection pour les projets de moins de trois mois. Les
-projets plus ambitieux sont généralement divisibles en tranches plus
-gérables et mesurables, permettant une approche itérative et
-incrémentale.</p>
+<p>L’apprentissage et la formation font partie du quotidien chez
+<em><b>Atova</b></em> ; mais jamais pendant les heures facturables d’un
+client.</p>
+<p>Nous choisissons de préférence des projets d’une durée inférieure à
+trois mois. Cependant, les projets plus ambitieux sont divisés en
+modules plus gérable et mesurable, permettant une approche itérative et
+progressive.</p>
 <p>Pour cela nous avons développé la méthode FAST: Form And Substance
 Together.</p>
 </aside>
@@ -107,30 +108,26 @@ l’industrie</p>
 </header>
 <aside>
 <h3 id="demo-01">DEMO 01</h3>
-DEMO 01
+MTC
 </aside>
 <aside>
 <h3 id="demo-02">DEMO 02</h3>
-DEMO 02
+LE PLOMBIER
 </aside>
 <aside>
 <h3 id="demo-03">DEMO 03</h3>
-DEMO 03
+MULTISERVICE
 </aside>
 </section>
 <!--^ section-2 -->
 </main>
 <footer class="center_justify">
+<section>
 <a href="https://github.com/atova-agency" target="_blank" title="github"><img
-src="https://atova-agency.github.io/img/a_atovy-ico.svg"
-class="link glow" alt="github" /> [Design Develop FAST]</a>
-</footer>
-<footer>
-<hr />
-<p>
-<small><a href="https://atova-agency.github.io/start/contact.html">Contact
-info</a></small>
-</p>
+src="./img/github32px.png" class="link glow" alt="github" /></a><br />
+  <a href="https://atova-agency.github.io/start/contact.html">Contact
+info</a>
+</section>
 </footer>
 </body>
 </html>
