draft02 landing page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="./css/vpkely.css" />
   <meta property="og:image" content="./img/writing.jpg" />
   <meta name="description" content="Secure Code Practician: Rust programming with webassembly" />
-  <p><link rel="icon" type="image/x-icon" href="./a_atovy-ico.svg"></p>
+  <p><link rel="icon" type="image/x-icon" href="https://atova-agency.github.io/start/a_atovy-ico.svg"></p>
 </head>
 <body>
 <header id="title-block-header">
