draft03 remove fullstack comment

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@ relever un défi qui nécessite une solution numérique ?</p>
 polyvalent au besoin.</p>
 <ul>
 <li>Frontend</li>
-<li>Serveurs</li>
+<li>Programmation / Serveurs</li>
 <li>Design</li>
 <li>Test</li>
 </ul>
-<p>Nous évitons les employés « fullstack » touche-à-tout et maîtres de
-rien.</p>
+<!-- Nous évitons les employés « fullstack » touche-à-tout et maîtres de rien. -->
 </aside>
 <aside>
 <h3 id="rapide">Rapide</h3>
