--- a/index.html
+++ b/index.html
@@ -65,36 +65,49 @@ relever un défi qui nécessite une solution numérique ?</p>
 </header>
 <aside>
 <h3 id="professionelle">Professionelle</h3>
-<p>Chaque collaborateur est expert dans son domaine et un généraliste
-polyvalent au besoin.</p>
 <ul>
-<li>Frontend</li>
-<li>Programmation / Serveurs</li>
-<li>Design</li>
-<li>Test</li>
+<li><dl>
+<dt>Chaque collaborateur est expert dans son domaine et un généraliste
+polyvalent au besoin.</dt>
+<dd>
+Frontend<br/>Programmation / Serveurs<br/>Design<br/>Test
+</dd>
+</dl></li>
 </ul>
 <!-- Nous évitons les employés « fullstack » touche-à-tout et maîtres de rien. -->
 </aside>
 <aside>
 <h3 id="rapide">Rapide</h3>
-<p>L’apprentissage et la formation font partie du quotidien chez
-<em><b>Atova</b></em> ; mais jamais pendant les heures facturables d’un
-client.</p>
-<p>Nous choisissons de préférence des projets d’une durée inférieure à
-trois mois. Cependant, les projets plus ambitieux sont divisés en
-modules plus gérable et mesurable, permettant une approche itérative et
-progressive.</p>
-<p>Pour cela nous avons développé la méthode FAST: Form And Substance
-Together.</p>
+<ul>
+<li><dl>
+<dt>Nos projets sont divisés en modules plus gérable et mesurable,
+permettant une approche itérative et progressive.</dt>
+<dd>
+Nous choisissons de préférence des projets d’une durée inférieure à
+trois mois.
+</dd>
+</dl></li>
+</ul>
+<!--
+- Pour cela nous avons développé la méthode FAST: Form And Substance Together.
+: L'apprentissage et la formation font partie du quotidien chez <em><b>Atova</b></em> ;
+mais jamais pendant les heures facturables d'un client.
+-->
 </aside>
 <aside>
 <h3 id="fiable">Fiable</h3>
-<p>Nous utilisons des outils et des solutions sûrs et validés par
-l’industrie</p>
 <ul>
-<li>Développement Rust (backend)</li>
-<li>Frontend dynamique avec Webassembly</li>
-<li>Intégration flexible avec les technologies existantes</li>
+<li><dl>
+<dt>Nous utilisons des outils et des solutions sûrs et validés par
+l’industrie</dt>
+<dd>
+<ul>
+<li>Développement Rust (backend)<br/>- Frontend dynamique avec
+Webassembly<br/>- Intégration flexible avec les technologies
+existantes</li>
+</ul>
+</dd>
+</dl></li>
 </ul>
 </aside>
 </section>
