--- a/index-ATOVA.html
+++ b/index-ATOVA.html
@@ -55,19 +55,6 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <div class="carousel-background"><img src="img/pawel-czerwinski-6lQDFGOB1iw-unsplash.jpg" alt=""></div>
-                    <div class="carousel-container">
-                        <div class="carousel-content">
-                            <h2>La solution la mieux adaptée à votre projet </h2>
-                            <p>
-                                est celle qui n’oblige pas votre projet à s’adapter à votre solution 
-                            </p>
-                            <!--<a href="" class="btn-get-started scrollto">Get Started</a> -->
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
                     <div class="carousel-background"><img src="img/3840x2160-colorful-abstract-background-v0-8j16f7e41qb91.webp" alt=""></div>
                     <div class="carousel-container">
                         <div class="carousel-content">
@@ -81,7 +68,20 @@
                 </div>
 
                 <div class="carousel-item">
-                    <div class="carousel-background"><img src="img/pexels-photo-1629236.jpeg" alt=""></div>
+                    <div class="carousel-background"><img src="img/pexels-photo-1629236.webp" alt=""></div>
+                    <div class="carousel-container">
+                        <div class="carousel-content">
+                            <h2>La solution la mieux adaptée à votre projet </h2>
+                            <p>
+                                est celle qui n’oblige pas votre projet à s’adapter à votre solution 
+                            </p>
+                            <!--<a href="" class="btn-get-started scrollto">Get Started</a> -->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="carousel-background"><img src="img/pawel-czerwinski-6lQDFGOB1iw-unsplash.webp" alt=""></div>
                     <div class="carousel-container">
                         <div class="carousel-content">
                             <h2>La solution la mieux adaptée à votre projet </h2>
